# transformers-visualizer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: poetry_publish.yml  python_versions.yml  unit_tests.yml
examples/: example.ipynb
tests/: run.py  test_visualizers.py
transformers_visualizer/: __init__.py  errors.py  plotting.py  visualizer.py
transformers_visualizer/visualizers/: __init__.py  attention.py  token_to_head_attention.py
