[tool.poetry]
name = "transformers-visualizer"
version = "0.2.2"
license = "Apache-2.0"
description = "Explain your 🤗 transformers without effort! Display the internal behavior of your model."
authors = ["VDuchauffour <vincent.duchauffour@proton.me>"]
readme = "README.md"
repository = "https://github.com/VDuchauffour/transformers-visualizer"
packages = [{ include = "transformers_visualizer" }]
keywords = [
    "machine learning",
    "natural language processing",
    "nlp",
    "explainability",
    "transformers",
    "model interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Documentation :: Sphinx",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
captum = ">=0.5.0"
transformers = ">=4.0.0"
matplotlib = ">=3.5"
torchtyping = ">=0.1.4"


[tool.poetry.group.dev.dependencies]
flake8 = ">=5.0.4"
bandit = ">=1.7.4"
black = { version = ">=22.10.0", allow-prereleases = true }
isort = ">=5.10.1"
mypy = ">=0.982"
pre-commit = ">=2.20.0"
pydocstyle = ">=6.1.1"
interrogate = ">=1.5.0"
pytest = ">=7.2.0"
ipython = ">=8.6.0"
ipykernel = ">=6.17.0"
ipywidgets = ">=8.0.2"
nb-black = ">=1.0.7"
fire = "^0.5.0"

[tool.black]
preview = true

[tool.isort]
profile = "black"
filter_files = true

[tool.interrogate]
fail-under = 80
ignore-module = true
ignore-nested-functions = true
ignore-private = true
exclude = ["tests"]

[tool.pydocstyle]
ignore = "D100,D202,D203,D205,D212,D407,D413,D401,D415,D400,D200,D406"
match-dir = "!tests"

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
